--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Ismoil Roxataliyev</title>
 </head>
 <body>
-<a href="https://kun.uz">Kun.uz</a>
+    <h1>Ismoil Roxataliyev's portfolio website</h1>
 </body>
 </html>
